[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/"]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.1",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black",
    "ruff",
]

[project]
name = "py-tldr"
description = "New Python client for tldr pages"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "iamgodot", email = "xugodot@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.7"
dependencies = [
    "click==8.0.3",
    "toml==0.10.2",
    "requests==2.26.0",
    "yaspin==2.1.0",
]
dynamic = ["version"]

[project.urls]
"Issue Tracker" = "https://github.com/iamgodot/py-tldr/issues"

[project.scripts]
tldr = "py_tldr:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "py_tldr.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["py_tldr", "tests"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "I"]
exclude = [".git", ".tox", "venv", "build", "__pypackages__"]
line-length = 88
per-file-ignores = {"src/py_tldr/__init__.py" = ["F401"]}
src = ["src", "tests"]

[tool.ruff.isort]
known-first-party = ["py_tldr"]

[tool.tbump]
github_url = "https://github.com/iamgodot/py-tldr"

[tool.tbump.version]
current = "0.7.0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "build: bump version to v{new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "src/py_tldr/__init__.py"

[[tool.tbump.before_commit]]
name = "Check changelog"
cmd = "grep -q {new_version} docs/CHANGELOG.md"
