[metadata]
name = py-tldr
version = attr: py_tldr.__version__
author = iamgodot
author_email = xugodot@gmail.com
description = New Python client for tldr pages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iamgodot/py-tldr
project_urls =
    Bug Tracker = https://github.com/iamgodot/py-tldr/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    toml
    rich
    click
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tldr = py_tldr:cli

[options.extras_require]
dev = pytest; pytest-mock; pytest-cov; flake8

[tool:pytest]
testpaths = tests

[coverage:run]
branch = true
source =
    py_tldr
    tests

[flake8]
exclude =
  .git
  venv
per-file-ignores =
    # __init__ module exports names
    src/py_tldr/__init__.py: F401
